--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,17 +8,17 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
-
-        </activity>
-        <activity android:name=".WelcomeStartAct" android:theme="@style/NotitleTheme">
+        <activity android:name=".MainActivity"></activity>
+        <activity
+            android:name=".WelcomeStartAct"
+            android:theme="@style/NotitleTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
+        <activity android:name=".GuideAct" android:theme="@style/NotitleTheme"></activity>
     </application>
 
 </manifest>
