添加了主页（Fragment1）的页面内容--一个GridView包含的几个条目，以及点击 更多 跳转到一个包含一个LIstView的Activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
         <activity
             android:name=".GuideAct"
             android:theme="@style/NotitleTheme" />
-        <activity android:name=".acti.ChooseCityActivity"></activity>
+        <activity android:name=".acti.ChooseCityActivity" />
+        <activity android:name=".acti.AllCatActivity"></activity>
     </application>
 
 </manifest>
