--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    useLibrary 'org.apache.http.legacy'
 }
 
 dependencies {
@@ -30,4 +31,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile files('libs/gson-2.3.1.jar')
     compile files('libs/gson-2.3.1-sources.jar')
+    compile files('libs/picasso-2.5.2.jar')
 }
+ 
